--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "/Users/hoge/dotfiles/vimfiles/vundle.git"]
-	path = /Users/hoge/dotfiles/vimfiles/vundle.git
+[submodule "vimfiles/vundle.git"]
+	path = vimfiles/vundle.git
 	url = http://github.com/gmarik/vundle.git
