mod key assigns for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,8 +22,8 @@ set-option -g mouse-resize-pane on
 bind C-t next-window
 
 # split key binding
-bind s split-window -h
-bind v split-window -v
+bind v split-window -h
+bind s split-window -v
 
 bind h select-pane -L
 bind j select-pane -D
